[gd_scene load_steps=3 format=2]

[ext_resource path="res://Debug/DebugWindow/DebugControlWindow.tscn" type="PackedScene" id=1]
[ext_resource path="res://Debug/Countries/DebugCountriesController.gd" type="Script" id=2]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="Window" parent="." instance=ExtResource( 1 )]
margin_left = -1.0
margin_right = 368.0
margin_bottom = 206.0
WindowName = "Countries"

[node name="VBoxContainer" type="VBoxContainer" parent="Window"]
margin_top = 20.0

[node name="HBoxContainer" type="HBoxContainer" parent="Window/VBoxContainer"]
margin_right = 140.0
margin_bottom = 16.0

[node name="ControllingCountryLabel" type="Label" parent="Window/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
margin_top = 1.0
margin_right = 104.0
margin_bottom = 15.0
text = "Current Country:"

[node name="ControllingCountry" type="OptionButton" parent="Window/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
margin_left = 108.0
margin_right = 140.0
margin_bottom = 16.0

[connection signal="WindowClosed" from="Window" to="." method="_on_Window_WindowClosed"]
[connection signal="item_selected" from="Window/VBoxContainer/HBoxContainer/ControllingCountry" to="." method="_on_ControllingCountry_item_selected"]
